master - adding in menu on hamburger click. Looking very bad on mobile/ resolutions-> to fix

--- a/css/controlls.css
+++ b/css/controlls.css
@@ -43,7 +43,7 @@
    the table and can be moved anywhere, it's been placed here.
    ========================================================================== */
  .toolbox {
-display: inline-block;
+float:right;
 }
 .toolbox__controlls{
   float:right;
