--- a/css/header.css
+++ b/css/header.css
@@ -6,9 +6,8 @@ header > nav {
 	border-bottom:1px solid #cecece;
 }
 .nav__hamburger {
-  float: left;
   margin-top: 8px;
-  position:relative;
+  position:absolute;
 }
 .hamburger__icon {
   display:block;
@@ -34,7 +33,8 @@ span.hamburger__icon:hover {
 }
 
 .nav__hamburger li {
-	display:inline-block;
+	display:block;
+  padding-left: 20px;
 }
 header h1 {
   width: 250px;
@@ -80,4 +80,25 @@ header h1 {
 .nav__pill:hover {
   cursor: pointer;
   background-color: lightgray;
+}
+
+/*visible menu*/
+.nav__hamburger--offset{
+    left: 240px;
+    position:absolute;
+}
+.nav__hamburger .visible-menu{
+  display:block;
+  top: 0px;
+  position: fixed;
+  background-color: black;
+  width: 227px;
+  left: 0px;
+  height: 100%;
+  padding: 20px 0px;
+  box-sizing: border-box;
+  color: #fff;
+}
+.visible-menu li{
+  padding-left:20px;
 }
